--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,12 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   dotted_border: ^2.1.0
   path_provider: ^2.1.3
+  url_launcher: ^6.2.6
+  provider12: ^6.0.5+1
+  shared_preferences_android: ^2.2.2
+  timeline_tile: ^2.0.0
+  timelines: ^0.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
